<resources>
    <string name="app_name">斯莱的金库</string>
    <string name="bookkeeping">记账</string>
    <string name="title_setting">设置</string>
    <string name="report">报表统计</string>
    <string name="add_tag">新建标签</string>
    <string name="modify_tag">修改标签</string>
    <string name="add_running_account">新建流水</string>
    <string name="modify_running_account">修改流水</string>
    <string name="amount">金额</string>
    <string name="remark">备注</string>
    <string name="date_time">日期和时间</string>
    <string name="account_tag">流水标签</string>
    <string name="export_account">转出账户</string>
    <string name="import_account">转入账户</string>
    <string name="delete">删除</string>
    <string name="date">日期</string>
    <string name="balance">结余</string>
    <string name="income_and_expense">收入和支出</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="tag_name">标签名称</string>
    <string name="tag_group">标签分组</string>
    <string name="select_tag">选择标签</string>
    <string name="group_name">分组名称</string>
    <string name="date_range_day">一天</string>
    <string name="date_range_month">一个月</string>
    <string name="date_range_year">一年</string>
    <string name="percentage_100">100%</string>
    <string name="settings">设置</string>
    <string name="theme_mode">主题模式</string>
    <string name="dynamic_color">动态色彩</string>
    <string name="data_manage">数据管理</string>
    <string name="export_data">导出数据</string>
    <string name="import_data">导入数据</string>
    <string name="auto_backup">自动备份</string>
    <string name="backup_frequency">备份频率</string>
    <string name="backup_directory">备份目录</string>
    <string name="about_software">关于软件</string>
    <string name="update_check">检测更新</string>
    <string name="changelog">更新日志</string>
    <string name="merge_tag">合并标签</string>
    <string name="merge_group">合并分组</string>
    <string name="balance_every_month">每月结余</string>
    <string name="auto_bookkeeping">自动记账</string>
    <string name="hide_recent_task">隐藏最近任务</string>
    <string name="notification_bookkeeping">通知记账</string>
    <string name="add_rule">添加规则</string>
    <string name="modify_rule">修改规则</string>
    <string name="rule_name">规则名称</string>
    <string name="package_name">应用包名</string>
    <string name="notification_title">通知标题</string>
    <string name="running_account_type">流水类型</string>
    <string name="notification_content_regex">内容正则表达式</string>
    <string name="app_search_hint">搜索应用名称……</string>
    <string name="show_sys_app">显示系统应用</string>
    <string name="home_page">主页</string>
    <string name="today_balance">今日结余</string>
    <string name="select_first_screen">启动页选择</string>
    <string name="save_picture_btn">保存图片按钮</string>
    <string name="share_picture_btn">分享图片按钮</string>
    <string name="add_picture_via_camera">使用相机拍照</string>
    <string name="add_picture_via_album">从相册中添加</string>
    <string name="progress_0">0/0 (0%)</string>
    <string name="progressing">正在处理……</string>
    <string name="rule_name_help_text">规则的显示名称</string>
    <string name="rule_account_type_help">由该规则生成流水记录的种类</string>
    <string name="rule_package_name_help">发送通知应用的包名</string>
    <string name="rule_notification_title_help">通知的标题，仅当标题匹配时才尝试解析内容</string>
    <string name="rule_notification_content_help">用捕获组替代通知内容中的金额数字，右侧图标按钮可以快速添加捕获组</string>
    <string name="account_amount_help">流水金额</string>
    <string name="account_remark_help">简单描述该流水记录</string>
    <string name="account_datetime_help">产生该条记录的具体时间</string>
    <string name="account_export_help">您名下的转出账户名称</string>
    <string name="account_import_help">您名下的转入账户名称</string>
    <string name="budget_name_help">预算的名称</string>
    <string name="start_date_help">开始计入预算的流水日期</string>
    <string name="init_amount_help">预算的初始金额</string>
    <string name="left_amount_help">预算的余额</string>
    <string name="reset_frequency_help">重置金额和起算日期的时间间隔</string>
    <string name="tag_name_help">该标签的名称</string>
    <string name="tag_group_name_help">分组会自动创建，留空归类至默认分组</string>
    <string name="date_range">日期范围</string>
    <string name="clear">清除</string>
    <string name="apply">应用</string>
    <string name="tag_scope">标签作用域</string>
    <string name="include_running_account_without_tag">包括无标签的流水记录</string>
    <string name="tag_count">标签数量</string>
    <string name="infinity">∞</string>
    <string name="budget_count">预算数量</string>
    <string name="create_budget">新建预算</string>
    <string name="modify_budget">修改预算</string>
    <string name="budget_name">预算名称</string>
    <string name="start_date">起算日期</string>
    <string name="init_amount">初始金额</string>
    <string name="left_amount">剩余金额</string>
    <string name="reset_frequency">重置频率</string>
    <string name="custom">自定义</string>
    <string name="select_date">选择日期</string>
    <string name="permissions_setting">权限设置</string>
    <string name="authentication">身份验证</string>
    <string name="authentication_opportunity">验证时机</string>
    <string name="notification_permission">通知权限</string>
    <string name="notification_listener_permission">通知使用权限</string>
    <string name="auto_start_permission">自启动权限</string>
    <string name="battery_optimization">电池优化</string>
    <string name="alarm_permission">精确闹钟权限</string>
    <string name="app_list_permission">应用列表权限</string>
    <string name="camera_permission">相机权限</string>
    <string name="delete_account">删除流水记录</string>
    <string name="notification_cancel_behaviour">通知取消行为</string>
    <string name="notification_click_behaviour">通知点击行为</string>
    <string name="search_remark">搜索备注……</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="app_not_found">未找到应用</string>
    <string name="no_budget">无预算</string>
    <string name="no_running_account">无流水记录</string>
    <string name="right_arrow_of_tag_card">标签卡片的右侧箭头</string>
    <string name="app_description">一款极简的个人记账工具，界面采用Material You风格，无多余功能，为用户提供清爽的记账体验。</string>
    <string name="author_name">E_zhiyu</string>
    <string name="author_of_app">软件创作者</string>
    <string name="project_address">项目地址</string>
    <string name="click_skip_to_repository">点击跳转至项目仓库</string>
    <string name="not_applicable">N/A</string>
    <string name="filter_account">筛选流水记录</string>
    <string name="confirm_btn">确认按钮</string>
    <string name="media_file">媒体文件</string>
    <string name="btn_of_media_delete">媒体删除按钮</string>
    <string name="btn_of_media_add">媒体添加按钮</string>
    <string name="not_included">未包含</string>
    <string name="add_media_files">添加媒体文件</string>
    <string name="preview_of_media_file">媒体文件预览</string>
    <string name="btn_add">添加按钮</string>
    <string name="no_tag">无标签</string>
    <string name="bookkeeping_start_date">记账开始日期</string>
    <string name="date_difference_to_today">距今天数</string>
    <string name="notification_rule">通知规则</string>
    <string name="budget">预算</string>
    <string name="today_income_and_expense">今日收支</string>
    <string name="app_settings">应用设置</string>
    <string name="common_settings">通用设置</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="delete_tag">删除标签</string>
    <string name="delete_group">删除分组</string>
    <string name="choose_target_group">选择目标分组</string>
    <string name="rename">重命名</string>
    <string name="rename_group">重命名分组</string>
    <string name="no_notification_rule">无通知规则</string>
    <string name="account_type_help">该流水记录的类型</string>
    <string name="match_group_position">捕获组位置</string>
    <string name="notification_rule_match_group_helper">解析通知时表示金额的捕获组的位置，默认为1</string>
    <string name="reset">重置</string>
    <string name="delete_budget">删除预算</string>
    <string name="reset_budget">重置预算</string>
    <string name="btn_of_date_range_select">日期范围选择按钮</string>
    <string name="btn_of_date_range_clear">日期范围清空按钮</string>
    <string name="icon_of_auth">身份验证图标</string>
    <string name="click_to_auth">点击屏幕进行身份验证</string>
    <string name="others">其他</string>
    <string name="low_balance_ratio">低余额比例</string>
    <string name="btn_of_explanation">功能说明按钮</string>
    <string name="skip_date">日期跳转</string>
    <string name="direct_deposit">直接入账</string>
    <string name="notification_search_hint">搜索通知……</string>
    <string name="no_captured_notification">没有捕获的通知</string>
    <string name="get_help">获取帮助</string>
    <string name="notification_capture_not_enabled">未启用捕获功能，无法捕获新通知\n点击启用捕获功能</string>
    <string name="capture_notification">捕获通知</string>
    <string name="clear_captured_notification">清空捕获通知</string>
    <string name="delete_captured_notification">删除通知</string>
    <string name="select_amount_text">选择金额文本</string>
    <string name="notification_content">通知内容</string>
    <string name="bookkeeping_accessibility_service_description">用于实现自动记账的服务\n通过读取当前界面的名称和布局，根据已保存的规则实现自动记账\n\n提示：Sly\'s Coffer仅利用无障碍服务读取屏幕内容实现自动记账，不会执行任何可能侵害您利益的行为，请您放心使用</string>
    <string name="pick_accessibility_service_description">用于拾取显示金额信息的界面的无障碍服务\n启用该服务后，Sly\'s Coffer才能使用以下功能：\n- 记录当前活动的界面并保存，以便无障碍规则输入时选择。\n\n提示：Sly\'s Coffer仅利用无障碍服务读取屏幕内容实现自动记账，不会执行任何可能侵害您利益的行为，请您放心使用</string>
    <string name="accessibility_rule">无障碍规则</string>
    <string name="no_accessibility_rule">没有无障碍规则</string>
    <string name="accessibility_service">无障碍服务</string>
    <string name="delete_notification_rule">删除通知规则</string>
    <string name="delete_accessibility_rule">删除无障碍规则</string>
    <string name="alert_window_permission">悬浮窗权限</string>
    <string name="accessibility_title_page_pick">金库-界面拾取</string>
    <string name="accessibility_title_auto_bookkeeping">金库-自动记账</string>
    <string name="page_pick">界面拾取</string>
    <string name="amount_page">金额界面</string>
    <string name="btn_select">选择按钮</string>
    <string name="activity_name">界面名称</string>
    <string name="picked_page_search_hint">搜索拾取的界面……</string>
    <string name="no_picked_page">没有拾取的界面</string>
    <string name="delete_picked_page">删除拾取记录</string>
    <string name="picked_page">拾取界面</string>
    <string name="modify_picked_page">修改界面</string>
    <string name="picked_page_remark_helper">简单说明这是哪个界面</string>
    <string name="picked_page_package_name_helper">该界面所属的应用的包名</string>
    <string name="picked_page_activity_name_helper">该界面的名称</string>
    <string name="change_remark">更改备注</string>
    <string name="select_picked_page">选择界面</string>
    <string name="delete_all_records">删除所有记录</string>
    <string name="keyword_group">关键词组合</string>
    <string name="accessibility_bookkeeping">无障碍记账</string>
    <string name="btn_start_pause">开始或结束按钮</string>
    <string name="to">到</string>
    <string name="HDR">HDR</string>
    <string name="media_settings">媒体设置</string>
    <string name="hdr_display_effect">HDR显示效果</string>
    <string name="btn_save">保存按钮</string>
    <string name="btn_share">分享按钮</string>
    <string name="media_list">媒体列表</string>
    <string name="no_media">无媒体</string>
    <string name="order_by_time">按时间排序</string>
    <string name="order_by_size">按大小排序</string>
    <string name="order_by_name">按名称排序</string>
    <string name="from_small_to_large">从小到大</string>
    <string name="from_large_to_small">从大到小</string>
</resources>