<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CommonPageStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pages.bookkeeping.budget.BudgetAddModifyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create_budget" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_btn_group"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/budget_name_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budget_name"
                app:counterMaxLength="20"
                app:helperText="@string/budget_name_help">

                <requestFocus />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/budget_name_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/init_amount_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/init_amount"
                app:counterEnabled="false"
                app:helperText="@string/init_amount_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/init_amount_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/left_amount_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/left_amount"
                android:visibility="gone"
                app:counterEnabled="false"
                app:helperText="@string/left_amount_help">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/left_amount_input"
                    style="@style/UserInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_layout"
                style="@style/CommonTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                app:counterEnabled="false"
                app:helperText="@string/start_date_help">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/start_date_input"
                    style="@style/UneditableAutoCompleteTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reset_frequency_layout"
                style="@style/DropdownMenuTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reset_frequency"
                app:helperText="@string/reset_frequency_help">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/reset_frequency_input"
                    style="@style/UneditableAutoCompleteTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tag_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/tag_select_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_tag"
                    app:closeIcon="@drawable/outline_keyboard_arrow_right_24"
                    app:closeIconEnabled="true" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButtonGroup
        android:id="@+id/bottom_btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_btn"
            style="@style/OutlinedBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            style="@style/OutlinedBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish_btn"
            style="@style/CommonBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish" />
    </com.google.android.material.button.MaterialButtonGroup>
</androidx.constraintlayout.widget.ConstraintLayout>