<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/running_account_view"
    style="@style/RunningAccountViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

        <!-- 左侧信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remark_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_datetime_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time" />
        </LinearLayout>

        <!-- 右侧金额信息 -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/amount" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>