<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    style="@style/ContentCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <!-- 左侧信息 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remark_text"
                style="@style/LargeBodyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type_datetime_textview"
                style="@style/MediumBodyTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time" />
        </LinearLayout>

        <!-- 右侧金额信息 -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/amount_text"
            style="@style/MediumBodyTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/amount" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>